--- a/notebooks/001_bronze.ipynb
+++ b/notebooks/001_bronze.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2d50a74",
+   "id": "64d72232",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -11,33 +11,46 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks notebook source\n",
-    "\n",
-    "# MAGIC %md\n",
-    "# MAGIC # Camada Bronze\n",
-    "# MAGIC\n",
-    "# MAGIC Carregando os dados brutos do dataset de filmes para a camada Bronze.\n",
-    "# MAGIC O arquivo CSV será dividido em 5 tabelas Delta.\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
     "# DBTITLE 1,Definir os caminhos\n",
-    "# Onde o arquivo CSV foi carregado\n",
-    "landing_zone_path = \"/Volumes/workspace/default/landing/top_100_movies_full_best_effort.csv\"\n",
+    "# Onde o arquivo CSV foi carregado. Ajuste se necessário.\n",
+    "landing_zone_path = \"/Volumes/workspace/default/landing/top_100_movies_full_best_effort.csv\" \n",
     "bronze_path = \"/mnt/bronze/movies_db\"\n",
     "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "# Criar os bancos de dados se não existirem\n",
+    "spark.sql(\"CREATE DATABASE IF NOT EXISTS bronze\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ff6f18a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Carregar o CSV em um DataFrame\n",
     "df_movies_raw = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", \"true\") \\\n",
     "    .option(\"inferSchema\", \"true\") \\\n",
     "    .load(landing_zone_path)\n",
     "\n",
-    "display(df_movies_raw)\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "display(df_movies_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22949f4",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Tabela 1: Filmes (Movies)\n",
     "from pyspark.sql.functions import col\n",
     "\n",
@@ -53,14 +66,23 @@
     "    col(\"Box Office ($M)\").alias(\"box_office_million\")\n",
     ")\n",
     "\n",
-    "df_movies.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_path}/movies\")\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS bronze.movies USING DELTA LOCATION '\" + f\"{bronze_path}/movies'\")\n",
+    "# Salva como Tabela Delta\n",
+    "df_movies.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"bronze.movies\")\n",
     "\n",
-    "display(df_movies)\n",
-    "\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "display(df_movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f9decd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Tabela 2: Gêneros (Genres)\n",
     "from pyspark.sql.functions import explode, split, col\n",
     "\n",
@@ -69,27 +91,46 @@
     "    explode(split(col(\"Genre(s)\"), \"\\\\|\")).alias(\"genre\")\n",
     ")\n",
     "\n",
-    "df_genres.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_path}/genres\")\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS bronze.genres USING DELTA LOCATION '\" + f\"{bronze_path}/genres'\")\n",
+    "df_genres.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"bronze.genres\")\n",
     "\n",
-    "display(df_genres)\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "display(df_genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a271ad43",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Tabela 3: Diretores (Directors)\n",
+    "from pyspark.sql.functions import col\n",
+    "\n",
     "df_directors = df_movies_raw.select(\n",
     "    col(\"Rank\").alias(\"movie_rank\"),\n",
     "    col(\"Director\").alias(\"director_name\")\n",
     ")\n",
     "\n",
-    "df_directors.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_path}/directors\")\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS bronze.directors USING DELTA LOCATION '\" + f\"{bronze_path}/directors'\")\n",
+    "df_directors.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"bronze.directors\")\n",
     "\n",
-    "display(df_directors)\n",
-    "\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "display(df_directors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f813fe4",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Tabela 4: Atores (Actors)\n",
     "from pyspark.sql.functions import explode, split, col\n",
     "\n",
@@ -98,13 +139,22 @@
     "    explode(split(col(\"Main Actor(s)\"), \"\\\\|\")).alias(\"actor_name\")\n",
     ")\n",
     "\n",
-    "df_actors.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_path}/actors\")\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS bronze.actors USING DELTA LOCATION '\" + f\"{bronze_path}/actors'\")\n",
+    "df_actors.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"bronze.actors\")\n",
     "\n",
-    "display(df_actors)\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
+    "display(df_actors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "334ce18d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# DBTITLE 1,Tabela 5: Países (Countries)\n",
     "from pyspark.sql.functions import explode, split, col\n",
     "\n",
@@ -113,8 +163,7 @@
     "    explode(split(col(\"Country\"), \"\\\\|\")).alias(\"country_name\")\n",
     ")\n",
     "\n",
-    "df_countries.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_path}/countries\")\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS bronze.countries USING DELTA LOCATION '\" + f\"{bronze_path}/countries'\")\n",
+    "df_countries.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"bronze.countries\")\n",
     "\n",
     "display(df_countries)"
    ]
