--- a/notebooks/001_bronze.ipynb
+++ b/notebooks/001_bronze.ipynb
@@ -31,11 +31,17 @@
    },
    "outputs": [],
    "source": [
-    "# DBTITLE 1,Carregar o CSV em um DataFrame\n",
-    "df_movies_raw = spark.read.format(\"csv\") \\\n",
-    "    .option(\"header\", \"true\") \\\n",
-    "    .option(\"inferSchema\", \"true\") \\\n",
+    "# Use an S3 path or a Unity Catalog Volume path\n",
+    "landing_zone_path = \"s3://your-bucket/path/to/top_100_movies_full_best_effort.csv\"\n",
+    "# Or, if using Unity Catalog Volumes:\n",
+    "# landing_zone_path = \"/Volumes/<catalog>/<schema>/<volume>/top_100_movies_full_best_effort.csv\"\n",
+    "\n",
+    "df_movies_raw = (\n",
+    "    spark.read.format(\"csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"inferSchema\", \"true\")\n",
     "    .load(landing_zone_path)\n",
+    ")\n",
     "\n",
     "display(df_movies_raw)"
    ]
