--- a/notebooks/1_landing_to_bronze.ipynb
+++ b/notebooks/1_landing_to_bronze.ipynb
@@ -2,78 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f223bf82",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d2878d28-424f-4047-a28d-ced27090c38d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "CREATE VOLUME IF NOT EXISTS movies_catalog.landing.landing_zone_movies;\n",
+    "CREATE VOLUME IF NOT EXISTS movies_catalog.bronze.bronze_zone_movies;\n",
+    "CREATE VOLUME IF NOT EXISTS movies_catalog.silver.silver_zone_movies;\n",
+    "CREATE VOLUME IF NOT EXISTS movies_catalog.gold.gold_zone_movies;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d6d3c2f3-2edd-4247-8a82-3459a063a8e5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Notebook: 1_landing_to_bronze\n",
-    "landing_prefix = \"dbfs:/FileStore/landing\"\n",
-    "bronze_prefix = \"dbfs:/mnt/datalake/bronze\"\n",
     "\n",
-    "df_movies = spark.read.option(\"header\",True).csv(f\"{landing_prefix}/movies_top100.csv\")\n",
-    "for c in df_movies.columns:\n",
-    "    df_movies = df_movies.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\",\"\").replace(\"%\",\"pct\"))\n",
-    "df_movies.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\",\"true\").save(f\"{bronze_prefix}/movies_top100\")\n",
-    "print(\"movies_top100 -> bronze done\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9896b541",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ratings = spark.read.option(\"header\",True).csv(f\"{landing_prefix}/movies_ratings.csv\")\n",
-    "for c in df_ratings.columns:\n",
-    "    df_ratings = df_ratings.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\",\"\").replace(\"%\",\"pct\"))\n",
-    "df_ratings.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_prefix}/movies_ratings\")\n",
-    "print(\"movies_ratings -> bronze done\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab92ba6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_revenue = spark.read.option(\"header\",True).csv(f\"{landing_prefix}/movies_revenue.csv\")\n",
-    "df_revenue.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_prefix}/movies_revenue\")\n",
-    "print(\"movies_revenue -> bronze done\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2c0891",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_casts = spark.read.option(\"header\",True).csv(f\"{landing_prefix}/movies_casts.csv\")\n",
-    "for c in df_casts.columns:\n",
-    "    df_casts = df_casts.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\",\"\"))\n",
-    "df_casts.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_prefix}/movies_casts\")\n",
-    "print(\"movies_casts -> bronze done\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "099eb1cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_meta = spark.read.option(\"header\",True).csv(f\"{landing_prefix}/movies_meta.csv\")\n",
-    "for c in df_meta.columns:\n",
-    "    df_meta = df_meta.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\",\"\"))\n",
-    "df_meta.write.format(\"delta\").mode(\"overwrite\").save(f\"{bronze_prefix}/movies_meta\")\n",
-    "print(\"movies_meta -> bronze done\")\n"
+    "from pyspark.sql import SparkSession\n",
+    "from delta.tables import *\n",
+    "\n",
+    "spark = SparkSession.builder.appName(\"Landing_to_Bronze\").getOrCreate()\n",
+    "\n",
+    "landing_path = \"/Volumes/movies_catalog/landing/landing_zone_movies\"\n",
+    "bronze_path = \"/Volumes/movies_catalog/bronze/bronze_zone_movies\"\n",
+    "\n",
+    "dbutils.fs.mkdirs(bronze_path)\n",
+    "\n",
+    "files = [\"movies_top100.csv\", \"movies_casts.csv\", \"movies_meta.csv\", \"movies_ratings.csv\", \"movies_revenue.csv\"]\n",
+    "\n",
+    "for file in files:\n",
+    "    print(f\"📥 Lendo arquivo: {file}\")\n",
+    "    df = spark.read.option(\"header\", True).csv(f\"{landing_path}/{file}\")\n",
+    "\n",
+    "    for c in df.columns:\n",
+    "        df = df.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\", \"\").replace(\"%\", \"pct\"))\n",
+    "\n",
+    "    table_name = file.replace(\".csv\", \"\")\n",
+    "    output_path = f\"{bronze_path}/{table_name}\"\n",
+    "\n",
+    "    df.write.format(\"delta\").mode(\"overwrite\").save(output_path)\n",
+    "    print(f\"✅ {file} movido para Bronze com sucesso → {output_path}\")\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
+   "dashboards": [],
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "2"
+   },
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7818770266757328,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "1_landing_to_bronze",
+   "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
