--- a/notebooks/2_bronze_to_silver.ipynb
+++ b/notebooks/2_bronze_to_silver.ipynb
@@ -2,36 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da6731d4",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b9fbd3a5-d9ff-4333-b9d3-41c3cbc61c01",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Notebook: 2_bronze_to_silver\n",
-    "bronze_prefix = \"dbfs:/mnt/datalake/bronze\"\n",
-    "silver_prefix = \"dbfs:/mnt/datalake/silver\"\n",
     "\n",
-    "movies = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_top100\")\n",
+    "bronze_prefix = \"/Volumes/movies_catalog/bronze/bronze_zone_movies\"\n",
+    "silver_prefix = \"/Volumes/movies_catalog/silver/silver_zone_movies\"\n",
+    "\n",
+    "movies  = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_top100\")\n",
     "ratings = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_ratings\")\n",
     "revenue = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_revenue\")\n",
-    "casts = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_casts\")\n",
-    "meta = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_meta\")\n",
+    "casts   = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_casts\")\n",
+    "meta    = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_meta\")\n",
     "\n",
     "from pyspark.sql.functions import col, trim\n",
-    "movies = movies.withColumn(\"Year\", trim(col(\"Year\")).cast(\"int\"))\n",
+    "\n",
+    "movies  = movies.withColumn(\"Year\", trim(col(\"Year\")).cast(\"int\"))\n",
     "ratings = ratings.withColumn(\"IMDb_Rating\", col(\"IMDb_Rating\").cast(\"double\"))\n",
     "\n",
-    "silver = (movies.join(ratings, [\"Title\"], \"left\")\n",
+    "silver = (\n",
+    "    movies.join(ratings, [\"Title\"], \"left\")\n",
     "    .join(revenue, [\"Title\"], \"left\")\n",
     "    .join(casts, [\"Title\"], \"left\")\n",
     "    .join(meta, [\"Title\"], \"left\")\n",
-    "    .dropDuplicates([\"Title\"]))\n",
-    "silver.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\",\"true\").partitionBy(\"Year\").save(f\"{silver_prefix}/top100_combined\")\n",
-    "print(\"silver written\")\n"
+    "    .dropDuplicates([\"Title\"])\n",
+    ")\n",
+    "\n",
+    "silver.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\", \"true\").partitionBy(\"Year\").save(f\"{silver_prefix}/top100_combined\")\n",
+    "\n",
+    "print(\"silver written ✅\")\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "2_bronze_to_silver",
+   "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
