--- a/notebooks/3_silver_to_gold.ipynb
+++ b/notebooks/3_silver_to_gold.ipynb
@@ -2,27 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01130ea0",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "043923b6-0086-4208-a364-27ce580e3d12",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Notebook: 3_silver_to_gold\n",
-    "silver_prefix = \"dbfs:/mnt/datalake/silver\"\n",
-    "gold_prefix = \"dbfs:/mnt/datalake/gold\"\n",
+    "\n",
+    "silver_prefix = \"/Volumes/movies_catalog/silver/silver_zone_movies\"\n",
+    "gold_prefix = \"/Volumes/movies_catalog/gold/gold_zone_movies\"\n",
     "\n",
     "df = spark.read.format(\"delta\").load(f\"{silver_prefix}/top100_combined\")\n",
     "\n",
     "from pyspark.sql.functions import col, row_number\n",
     "from pyspark.sql.window import Window\n",
+    "\n",
+    "\n",
     "window = Window.partitionBy(\"Year\").orderBy(col(\"IMDb_Rating\").desc())\n",
-    "top10 = df.withColumn(\"rn\", row_number().over(window)).filter(col(\"rn\")<=10).drop(\"rn\")\n",
-    "top10.write.format(\"delta\").mode(\"overwrite\").save(f\"{gold_prefix}/top10_by_year\")\n",
-    "print(\"gold written\")\n"
+    "\n",
+    "top10 = (\n",
+    "    df.withColumn(\"rn\", row_number().over(window))\n",
+    "      .filter(col(\"rn\") <= 10)\n",
+    "      .drop(\"rn\")\n",
+    ")\n",
+    "\n",
+    "top10.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\", \"true\").save(f\"{gold_prefix}/top10_by_year\")\n",
+    "\n",
+    "print(\"gold written ✅\")\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "3_silver_to_gold",
+   "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
