--- a/notebooks/1_landing_to_bronze.ipynb
+++ b/notebooks/1_landing_to_bronze.ipynb
@@ -53,23 +53,50 @@
     "spark = SparkSession.builder.appName(\"Landing_to_Bronze\").getOrCreate()\n",
     "\n",
     "landing_path = \"/Volumes/movies_catalog/landing/landing_zone_movies\"\n",
-    "bronze_path = \"/Volumes/movies_catalog/bronze/bronze_zone_movies\"\n",
+    "bronze_path  = \"/Volumes/movies_catalog/bronze/bronze_zone_movies\"\n",
     "\n",
     "dbutils.fs.mkdirs(bronze_path)\n",
     "\n",
-    "files = [\"movies_top100.csv\", \"movies_casts.csv\", \"movies_meta.csv\", \"movies_ratings.csv\", \"movies_revenue.csv\"]\n",
+    "files = [\n",
+    "    \"movies_casts.csv\",\n",
+    "    \"movies_meta.csv\",\n",
+    "    \"movies_ratings.csv\",\n",
+    "    \"movies_revenue.csv\",\n",
+    "    \"movies_top100.csv\"\n",
+    "]\n",
     "\n",
     "for file in files:\n",
-    "    print(f\"📥 Lendo arquivo: {file}\")\n",
-    "    df = spark.read.option(\"header\", True).csv(f\"{landing_path}/{file}\")\n",
+    "    print(f\"📥 Lendo arquivo da Landing: {file}\")\n",
+    "    \n",
+    "    df = (\n",
+    "        spark.read\n",
+    "            .option(\"header\", True)\n",
+    "            .csv(f\"{landing_path}/{file}\")\n",
+    "    )\n",
     "\n",
+    "    # Normalização dos nomes das colunas\n",
     "    for c in df.columns:\n",
-    "        df = df.withColumnRenamed(c, c.strip().replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\", \"\").replace(\"%\", \"pct\"))\n",
+    "        df = df.withColumnRenamed(\n",
+    "            c,\n",
+    "            c.strip()\n",
+    "             .replace(\" \", \"_\")\n",
+    "             .replace(\"(\", \"\")\n",
+    "             .replace(\")\", \"\")\n",
+    "             .replace(\"%\", \"pct\")\n",
+    "        )\n",
     "\n",
     "    table_name = file.replace(\".csv\", \"\")\n",
     "    output_path = f\"{bronze_path}/{table_name}\"\n",
     "\n",
-    "    df.write.format(\"delta\").mode(\"overwrite\").save(output_path)\n",
+    "    # Salvar com mergeSchema habilitado\n",
+    "    (\n",
+    "        df.write\n",
+    "          .format(\"delta\")\n",
+    "          .mode(\"overwrite\")\n",
+    "          .option(\"mergeSchema\", \"true\")\n",
+    "          .save(output_path)\n",
+    "    )\n",
+    "\n",
     "    print(f\"✅ {file} movido para Bronze com sucesso → {output_path}\")\n"
    ]
   }
