--- a/notebooks/2_bronze_to_silver.ipynb
+++ b/notebooks/2_bronze_to_silver.ipynb
@@ -18,7 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "# Notebook: 2_bronze_to_silver\n",
+    "from pyspark.sql.functions import col\n",
+    "from delta.tables import *\n",
     "\n",
     "bronze_prefix = \"/Volumes/movies_catalog/bronze/bronze_zone_movies\"\n",
     "silver_prefix = \"/Volumes/movies_catalog/silver/silver_zone_movies\"\n",
@@ -29,22 +30,49 @@
     "casts   = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_casts\")\n",
     "meta    = spark.read.format(\"delta\").load(f\"{bronze_prefix}/movies_meta\")\n",
     "\n",
-    "from pyspark.sql.functions import col, trim\n",
+    "join_key = \"Title\"\n",
     "\n",
-    "movies  = movies.withColumn(\"Year\", trim(col(\"Year\")).cast(\"int\"))\n",
-    "ratings = ratings.withColumn(\"IMDb_Rating\", col(\"IMDb_Rating\").cast(\"double\"))\n",
+    "movies_ren = movies.toDF(*[\n",
+    "    \"movies_\" + c if c.lower() == \"year\" else c for c in movies.columns\n",
+    "])\n",
+    "ratings_ren = ratings.toDF(*[\n",
+    "    f\"rt_{c}\" if c != join_key else c for c in ratings.columns\n",
+    "])\n",
+    "revenue_ren = revenue.toDF(*[\n",
+    "    f\"rev_{c}\" if c != join_key else c for c in revenue.columns\n",
+    "])\n",
+    "casts_ren = casts.toDF(*[\n",
+    "    f\"cast_{c}\" if c != join_key else c for c in casts.columns\n",
+    "])\n",
+    "meta_ren = meta.toDF(*[\n",
+    "    f\"meta_{c}\" if c != join_key else c for c in meta.columns\n",
+    "])\n",
     "\n",
     "silver = (\n",
-    "    movies.join(ratings, [\"Title\"], \"left\")\n",
-    "    .join(revenue, [\"Title\"], \"left\")\n",
-    "    .join(casts, [\"Title\"], \"left\")\n",
-    "    .join(meta, [\"Title\"], \"left\")\n",
-    "    .dropDuplicates([\"Title\"])\n",
+    "    movies_ren\n",
+    "        .join(ratings_ren, join_key, \"left\")\n",
+    "        .join(revenue_ren, join_key, \"left\")\n",
+    "        .join(casts_ren, join_key, \"left\")\n",
+    "        .join(meta_ren, join_key, \"left\")\n",
     ")\n",
     "\n",
-    "silver.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\", \"true\").partitionBy(\"Year\").save(f\"{silver_prefix}/top100_combined\")\n",
+    "if \"movies_Year\" in silver.columns:\n",
+    "    silver = silver.withColumnRenamed(\"movies_Year\", \"Year\")\n",
+    "elif \"year\" in silver.columns:\n",
+    "    silver = silver.withColumnRenamed(\"year\", \"Year\")\n",
     "\n",
-    "print(\"silver written ✅\")\n"
+    "silver = silver.select(*dict.fromkeys(silver.columns))\n",
+    "\n",
+    "(\n",
+    "    silver.write\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .option(\"overwriteSchema\", \"true\")\n",
+    "        .partitionBy(\"Year\")\n",
+    "        .save(f\"{silver_prefix}/top100_combined\")\n",
+    ")\n",
+    "\n",
+    "print(\"✅ movido para Silver com sucesso\")\n"
    ]
   }
  ],
