--- a/notebooks/3_silver_to_gold.ipynb
+++ b/notebooks/3_silver_to_gold.ipynb
@@ -28,8 +28,7 @@
     "from pyspark.sql.functions import col, row_number\n",
     "from pyspark.sql.window import Window\n",
     "\n",
-    "\n",
-    "window = Window.partitionBy(\"Year\").orderBy(col(\"IMDb_Rating\").desc())\n",
+    "window = Window.partitionBy(\"Year\").orderBy(col(\"rt_IMDb_Rating\").desc())\n",
     "\n",
     "top10 = (\n",
     "    df.withColumn(\"rn\", row_number().over(window))\n",
@@ -39,7 +38,7 @@
     "\n",
     "top10.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\", \"true\").save(f\"{gold_prefix}/top10_by_year\")\n",
     "\n",
-    "print(\"gold written ✅\")\n"
+    "print(\"✅ Gold rodado com sucesso \")\n"
    ]
   }
  ],
