--- a/notebooks/4_ingestion_postgres_to_landing.ipynb
+++ b/notebooks/4_ingestion_postgres_to_landing.ipynb
@@ -2,51 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94de0062",
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ad4c26b8-daa9-4f8c-b918-805f9d8f7304",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
-    "jdbc_hostname = \"dpg-d3onn3muk2gs73dpvmk0-a.oregon-postgres.render.com\"\n",
-    "jdbc_port = \"5432\"\n",
-    "jdbc_database = \"pipeline_r85p\"\n",
-    "jdbc_url = f\"jdbc:postgresql://{jdbc_hostname}:{jdbc_port}/{jdbc_database}\"\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark = SparkSession.builder.appName(\"Postgres_to_Landing\").getOrCreate()\n",
+    "\n",
+    "landing_path = \"/Volumes/movies_catalog/landing/landing_zone_movies\"\n",
+    "\n",
+    "dbutils.fs.mkdirs(landing_path)\n",
+    "\n",
+    "host = \"postgres.c0fk60kqcz2v.us-east-1.rds.amazonaws.com\"\n",
+    "porta = \"5432\"\n",
+    "database = \"postgres\"\n",
+    "usuario = \"postgres\"\n",
+    "senha = \"postgres\"\n",
+    "\n",
+    "jdbc_url = f\"jdbc:postgresql://{host}:{porta}/{database}\"\n",
     "\n",
     "connection_properties = {\n",
-    "    \"user\": \"pipeline_r85p_user\",\n",
-    "    \"password\": \"38xMH6YdS6viWKZzpOlp2FkZELFf0gwr\",\n",
+    "    \"user\": usuario,\n",
+    "    \"password\": senha,\n",
     "    \"driver\": \"org.postgresql.Driver\"\n",
     "}\n",
     "\n",
     "tables = [\n",
+    "    \"movies_top100\",\n",
     "    \"movies_casts\",\n",
     "    \"movies_meta\",\n",
     "    \"movies_ratings\",\n",
-    "    \"movies_revenue\",\n",
-    "    \"movies_top100\"\n",
+    "    \"movies_revenue\"\n",
     "]\n",
     "\n",
-    "landing_path = \"/mnt/datalake/landing/movies/\"\n",
-    "\n",
     "for table in tables:\n",
+    "    print(f\"📥 Lendo tabela: {table}\")\n",
+    "\n",
     "    df = spark.read.jdbc(\n",
     "        url=jdbc_url,\n",
     "        table=f\"public.{table}\",\n",
     "        properties=connection_properties\n",
     "    )\n",
-    "    df.write.mode(\"overwrite\").format(\"delta\").save(f\"{landing_path}{table}\")\n"
+    "\n",
+    "    output_path = f\"{landing_path}/{table}.csv\"\n",
+    "\n",
+    "    df.write.mode(\"overwrite\").option(\"header\", True).csv(output_path)\n",
+    "\n",
+    "    print(f\"✅ Tabela {table} carregada para Landing → {output_path}\")\n"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "4_ingestion_postgres_to_landing",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
