--- a/notebooks/2_bronze_to_silver.ipynb
+++ b/notebooks/2_bronze_to_silver.ipynb
@@ -18,6 +18,7 @@
    },
    "outputs": [],
    "source": [
+    "# Notebook: 1_bronze_to_silver\n",
     "from pyspark.sql.functions import col\n",
     "from delta.tables import *\n",
     "\n",
